--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="container">
     
       <div>
-      <div class="accordion accordion-flush" id="accordionFlushExample" style="width: 600px">
+      <div class="accordion accordion-flush" id="accordionFlushExample" style="width: 530px">
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -171,7 +171,7 @@
       </div>
     
       <div>
-        <ul class="nav nav-tabs" id="myTab" role="tablist" style="width: 600px">
+        <ul class="nav nav-tabs" id="myTab" role="tablist" style="width: 530px">
           <li class="nav-item" role="presentation">
             <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
               <p>
@@ -349,28 +349,28 @@
     <div class="container">
 
       <div class="card" style="width: 20rem;">
-        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="...">
+        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="airplane">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
 
       <div class="card" style="width: 20rem;">
-        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="...">
+        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="airplane">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
 
       <div class="card" style="width: 20rem;">
-        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="...">
+        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="airplane">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
 
       <div class="card" style="width: 20rem;">
-        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="...">
+        <img src="./img/sl_airplane.jpeg" class="card-img-top" alt="airplane">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
